# HifiMule

./: .gitattributes  .gitignore  Cargo.toml  DEBUGGING.md  DESIGN.md  NOTICE  PRODUCT.md  README.md  package-lock.json  package.json
.claude/: settings.json  settings.local.json
.codex/: auth.json  models_cache.json
.github/workflows/: release.yml  smoke-test.yml
.impeccable/: design.json
.impeccable/critique/: 2026-06-05T09-12-52Z__hifimule-ui-src.md
_bmad-output/brainstorming/: brainstorming-session-2026-05-08-1.md  brainstorming-session-2026-06-12-1.md  brainstorming-session-20260711-174346.md
_bmad-output/implementation-artifacts/: 1-1-multi-process-workspace-initialization.md  1-2-cross-platform-system-tray-hub.md  1-3-detachable-tauri-ui-skeleton.md  10-1-device-manifest-editing-identity-and-folder-settings.md  10-2-separate-playlist-folder-and-relocation-cleanup.md  10-3-profile-based-default-folders-and-setup-ordering.md  11-1-mediaprovider-playlist-write-trait-amendment.md  11-10-curation-view-complete-list-order-numbers-and-reorder.md  11-2-jellyfinprovider-playlist-write-adapter.md  11-3-subsonicprovider-playlist-write-adapter.md  11-4-playlist-rpcs-and-selection-to-tracks-resolution.md  11-5-save-selection-as-playlist-ui-and-context-menu.md  11-6-dual-panel-playlist-curation-view-and-stats.md  11-7-add-tracks-to-playlist-browse-and-curation.md  11-8-playlist-rename-and-delete.md  11-9-playlist-reorder-provider-and-rpc.md  12-1-autofill-pipeline-domain-model-and-engine.md  12-2-autofill-manifest-schema-and-db-history-scaffolding.md  12-3-multi-slot-sync-time-expansion.md  12-4-playlist-source-tag-filter-and-shares.md  12-5-budget-headroom-duration-fallback-chain.md  12-6-autofill-configuration-ui-and-multi-server-slots.md  12-7-autofill-rpc-state-contract-and-i18n.md  13-1-memory-and-rotation-strategies.md  13-2-quality-and-version-ordering.md  13-3-curation-and-discovery-sources.md  13-4-delight-rarity-draws-and-pity-timer.md  13-5-context-and-encoding-from-goals.md  13-6-advanced-units-and-promotion.md  14-1-temp-only-disk-staging-for-provider-sync.md  14-2-bounded-producer-writer-pipeline.md  (+135 more)
changelogs/: CHANGELOG-0.10.0.md  CHANGELOG-0.11.0.md  CHANGELOG-0.11.1.md  CHANGELOG-0.12.0.md  CHANGELOG-0.13.0.md  CHANGELOG-0.4.1.md  CHANGELOG-0.4.2.md  CHANGELOG-0.5.1.md  CHANGELOG-0.5.4.md  CHANGELOG-0.5.5.md  CHANGELOG-0.5.6.md  CHANGELOG-0.6.0.md  CHANGELOG-0.7.0.md  CHANGELOG-0.8.0.md  CHANGELOG-0.8.1.md  CHANGELOG-0.8.2.md  CHANGELOG-0.8.3.md  CHANGELOG-0.8.4.md  CHANGELOG-0.9.0.md  CHANGELOG-0.9.1.md  CHANGELOG.md
docs/: api-contracts-hifimule-daemon.md  api-contracts-jellyfinsync-daemon.md  architecture-hifimule-daemon.md  architecture-hifimule-ui.md  architecture-jellyfinsync-daemon.md  architecture-jellyfinsync-ui.md  component-inventory-hifimule-ui.md  component-inventory-jellyfinsync-ui.md  data-models-hifimule-daemon.md  data-models-jellyfinsync-daemon.md  deep-dive-autofill.md  development-guide.md  index.md  integration-architecture.md  localization.md  project-overview.md  project-parts.json  project-scan-report.json  release-guide.md  source-tree-analysis.md
hifimule-daemon/: Cargo.toml  Info.plist  build.rs
hifimule-daemon/assets/: device-profiles.json
hifimule-daemon/src/: api.rs  auto_fill.rs  db.rs  device_io.rs  main.rs  paths.rs  rpc.rs  scrobbler.rs  server_manager.rs  service.rs  sync.rs  tests.rs  transcoding.rs  vault.rs
hifimule-daemon/src/auto_fill/: fetch.rs  mod.rs  pipeline.rs
hifimule-daemon/src/device/: mod.rs  mtp.rs  tests.rs
hifimule-daemon/src/domain/: models.rs
hifimule-daemon/src/providers/: jellyfin.rs  mod.rs  subsonic.rs
hifimule-i18n/: Cargo.toml  catalog.json
hifimule-ui/: index.html  package-lock.json  package.json  splashscreen.html  tsconfig.json  vite.config.ts
jellyfinsync-daemon/: Cargo.toml  build.rs
jellyfinsync-ui/: index.html  package-lock.json  package.json  vite.config.ts
jellysync-daemon/: Cargo.toml
jellysync-daemon/src/: api.rs  db.rs  main.rs  rpc.rs  scrobbler.rs  sync.rs  tests.rs
jellysync-daemon/src/device/: mod.rs  tests.rs
jellysync-ui/: index.html  package-lock.json  package.json  splashscreen.html  vite.config.ts
scripts/: bump-version.mjs  bundle-macos-libs.mjs  check-macos-minimum-system-version.mjs  download-release-asset.ps1  prepare-sidecar.mjs
(+147 files in other folders)
