[workspace]
members = [
    "hifimule-daemon",
    "hifimule-ui/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.93.0"

[workspace.dependencies]
tokio = { version = "~1.49", features = ["rt-multi-thread", "macros", "time", "fs", "sync"] }
anyhow = "~1.0"
thiserror = "~2.0"
rusqlite = { version = "~0.38", features = ["bundled"] }
keyring = "~3.6"
tray-icon = "~0.19"
tao = "~0.31"
image = { version = "~0.25", default-features = false, features = ["png"] }
reqwest = { version = "~0.12", features = ["json", "stream"] }
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
axum = "~0.8"
tower-http = { version = "~0.6", features = ["cors"] }
http = "~1.1"
notify-rust = { version = "~4.12", default-features = false, features = ["z"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"

[profile.no-opt]
inherits = "dev"
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
