[package]
name = "hifimule-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "hifimule-daemon"
path = "src/main.rs"



[dependencies]
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rusqlite.workspace = true

tray-icon.workspace = true
tao.workspace = true
image.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tower-http.workspace = true
http.workspace = true
keyring = "2.3"
futures = "0.3"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
bytes = "1.0"
md-5 = "0.10"
tracing = "0.1"
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem", "Win32_Devices_DeviceAndDriverInstallation"] }
notify-rust.workspace = true

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
windows = { version = "0.58", features = [
    "Win32_Devices_PortableDevices",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Storage_FileSystem",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
    "implement",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
winresource = "0.1"
pkg-config = "0.3"

[dev-dependencies]
mockito = "1.5"
tempfile = "3"
