[package]
name = "jellysync-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rusqlite.workspace = true
keyring.workspace = true
tray-icon.workspace = true
tao.workspace = true
image.workspace = true
