[package]
name = "jellysync-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "jellysync-daemon"
path = "src/main.rs"



[dependencies]
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rusqlite.workspace = true

tray-icon.workspace = true
tao.workspace = true
image.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tower-http.workspace = true
http.workspace = true
keyring = "2.3"
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }
bytes = "1.0"
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
mockito = "1.5"
tempfile = "3"
